--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+
 html {
     scroll-behavior: smooth;
 }
@@ -45,7 +47,16 @@ nav {
     font-size: 5rem;
 }
 
+.banner p{
+    font-size: 25px;
+    font-family: 'Source Code Pro', monospace;
+
+}
+.banner p>span{
+    text-decoration: underline;
+}
 .banner {
+
     height: 85vh;
     /* background-color: #152025; */
     /* padding: 4rem; */
